# work-distributer

./: README.md  work-distributer.cabal
snaplets/heist/templates/: giveFile.tpl  list.tpl  uploadFile.tpl
src/: Main.hs
